# RabbitQC-X

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  compile_flags.txt
common/: exceptions.hpp
common/include/: RabbitIO.h
common/lib/: deflate_decompress.hpp
src/: Globals.h  cmdinfo.h  main.cpp  th_ass.h
sunway/: CMakeLists.txt
sunway/lib.bak/: deflate_decompress.hpp
sunway/slave/: Globals.h  duplicate.h  slave.cpp
sunway/src/: DataPool.h  FastxStream.cpp  FastxStream.h  FileReader.cpp  Formater.h  adapter.cpp  cmdinfo.cpp  cmdinfo.h.bak  duplicate.h  filter.h  globalMutex.h  peqc.cpp  peqc.h  pigz.h  pugz.h  qcdata.h  seqc.cpp  seqc.h  state.cpp  state.h  tgsstate.h
x86/: CMakeLists.txt
x86/include/: FileUtils.hpp
x86/lib.bak/: deflate_decompress.hpp  memory.hpp
x86/src/: Buffer.h  Common.h  DataPool.h  DataQueue.h  FastxChunk.h  FastxStream.cpp  FastxStream.h  FileReader.h  Reference.h  adapter.cpp  adapter.h  cmdinfo.cpp  cmdinfo.h.bak  duplicate.h  jsonrepoter.cpp  jsonrepoter.h  nucleotidetree.h  peqc.cpp  peqc.h  pragzip.h  seqc.cpp  seqc.h  state.cpp  state.h  threadinfo.h  umier.h  utils.h
